--- a/css/setting.css
+++ b/css/setting.css
@@ -1,19 +1,15 @@
 :root {
     color-scheme: light dark;
     /*    for safari popup page. */
-    --bili-blue: #23ADE5;
-    --bili-pink: #FB7299;
-    --bili-pink-a70: rgba(251, 114, 153, 0.7);
-    --bili-blue-a70: rgba(35, 173, 229, 0.7);
+
     --personal-verify: -38px -53px;
     --organization-verify: -4px -53px;
     --non-verify: 17px -53px;
-    --dark-background: rgba(41, 42, 45,1);
-    --dark-background-a70: rgba(41, 42, 45, 0.7);
-    --light-background: rgba(255, 255, 255,1);
-    --light-background-a70: rgba(255, 255, 255, 0.7);
-    --text-light-gray: #6d757a;
-    --text-dark-gray: #8d959a;
+    --bili-brand: #FB7299;
+    --bili-brand-a70: rgba(251, 114, 153, 0.7);
+    --background: rgba(255, 255, 255,1);
+    --background-a70: rgba(255, 255, 255, 0.7);
+    --text-gray: #6d757a;
 }
 
 a{
@@ -21,12 +17,60 @@ a{
 }
 
 #main{
+    padding-top: 0;
+}
+
+.setting-group{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     padding-top: 100px;
     position: relative;
+    align-items: center;
+}
+
+.setting-sub-group{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 90%;
+    padding: 20px 0;
+}
+
+.setting-sub-group-title{
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.setting-sub-group-item{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 20px 0;
+}
+
+.setting-item-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+.setting-item-text div{
+    margin: 5px 0;
+}
+
+.setting-item-name{
+    font-weight: bold;
+}
+
+.setting-item-description{
+    font-size: 12px;
+    color: var(--text-gray);
+}
+
+.setting-item-switch{
+    margin-right: 20px;
 }
 
 #rua-icon-host{
@@ -88,7 +132,7 @@ a{
 }
 
 .user-name span{
-    color: var(--text-light-gray);
+    color: var(--text-gray);
 }
 
 .user-name a{
@@ -203,7 +247,7 @@ a{
 .dropbox select{
     padding: 0 2%;
     border: 0;
-    border-bottom: 2px solid var(--bili-pink);
+    border-bottom: 2px solid var(--bili-brand);
     scrollbar-width:thin;
     outline: none !important;
     transition: 0.4s;
@@ -221,7 +265,7 @@ a{
 }
 
 .setting-description{
-    color: var(--text-light-gray);
+    color: var(--text-gray);
     line-height: 57px;
 }
 
@@ -308,46 +352,30 @@ a{
 /*}*/
 
 @media (prefers-color-scheme: dark) {
+    :root{
+        --bili-brand: #23ADE5!important;
+        --bili-brand-a70: rgba(35, 173, 229, 0.7) !important;
+        --background: rgba(41, 42, 45,1) !important;
+        --background-a70: rgba(41, 42, 45, 0.7) !important;
+        --text-gray: #8d959a!important;
+    }
     #rua-icon-host{
         background-color: rgba(0, 0, 0, 0.72);
         border-bottom: none;
     }
 
-    .rua-download-block-qn-item{
-        background: var(--bili-blue);
-    }
-
-    .rua-download-add circle{
-        fill: var(--bili-blue-a70);
-    }
-
     .rua-head{
-        background: var(--dark-background-a70);
+        background: var(--background-a70);
     }
 
     .user-name a{
         color: #fff;
     }
 
-    .user-name span{
-        color: var(--text-dark-gray);
-    }
-
-    .button .checkbox input:checked + label {
-        background: var(--bili-blue) !important;
-    }
-    .button .checkbox input:checked + label:after {
-        background: var(--bili-blue) !important;
-    }
 
     .dropbox select{
         background: #292a2d;
         color: #fff;
-        border-color: var(--bili-blue);
-    }
-
-    .setting-description{
-        color: var(--text-dark-gray);
     }
 }
 
